# options_results

./: Cargo.toml  Readme.md
doc/: search-index.js
doc/options_results/: ResultIter.t.html  index.html  trait.OptionIter.html
doc/options_results/optioniter/: OptionIter.t.html
doc/src/options_results/: lib.rs.html  resultiter.rs.html
docs/implementors/options_results/: trait.ResultIter.js
docs/options_results/: sidebar-items.js  trait.ResultIter.html
docs/options_results/optioniter/: trait.OptionIter.html
docs/options_results/resultiter/: trait.ResultIter.html
docs/src/options_results/: optioniter.rs.html
src/: lib.rs  optioniter.rs  resultiter.rs
